Significant changes and additions: - Fully added the Redis middleware component allowing for commands to store persistant data into redis. - Static redis queues for RCON data fully implemented. - Added scripting engine Tengo to allow for configurable stats implementations. - Added stats and influxdb component.

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -1,8 +1,65 @@
 {
-    "queues_prefix": "rconqueues:",
+    "enable_redis_queue": true,
+    "enable_influx_stats": true,
+    "max_queue_size": 10,
+    "queues_prefix": "rconqueues:{tag}",
     "static_queues": [
         "manager",
         "test"
     ],
-    
+    "interval_callbacks": [
+        {
+            "command": "status",
+            "storage_key": "middleware:{tag}:ic:status",
+            "interval": 10,
+            "run_on_connect": true
+        },
+        {
+            "command": "serverinfo",
+            "storage_key": "middleware:{tag}:ic:serverinfo",
+            "interval": 10,
+            "run_on_connect": true
+        },
+        {
+            "command": "server.seed",
+            "storage_key": "middleware:{tag}:seed",
+            "interval": 0,
+            "run_on_connect": true
+        },
+        {
+            "command": "server.worldsize",
+            "storage_key": "middleware:{tag}:worldsize",
+            "interval": 0,
+            "run_on_connect": true
+        }
+    ],
+    "redis": {
+        "hostname": "data.rustproof.io",
+        "port": 6379,
+        "db": 2,
+        "password": ""
+    },
+    "influx": {
+        "hostname": "data.rustproof.io",
+        "port": 8086,
+        "username": "bbstats",
+        "password": "",
+        "database": "blueberry_v2",
+        "ssl": true
+    },
+    "stats": {
+        "invoked": [
+            {
+                "command": "server.fps",
+                "script": "scripts/fps.tengo",
+                "interval": 1
+            }
+        ],
+        "monitored": [
+            {
+                "pattern": "Calling '.*' on '.*' took [\\d]+ms.*",
+                "script": "scripts/plugin-timewarning.tengo"
+            }
+        ]
+    }
 }
