Fixed so influx database and bucket/retention policy are configurable. Added better docs.

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -37,13 +37,13 @@
         "hostname": "data.rustproof.io",
         "port": 6379,
         "db": 2,
-        "password": ""
+        "password": "npKqJ89jbajGVV4s"
     },
     "influx": {
         "hostname": "data.rustproof.io",
         "port": 8086,
         "username": "bbstats",
-        "password": "",
+        "password": "3nb6oplk4nxKL",
         "database": "blueberry_v2",
         "ssl": true
     },
