Added stat script for averaging player ping

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -53,6 +53,11 @@
                 "command": "server.fps",
                 "script": "scripts/fps.tengo",
                 "interval": 1
+            },
+            {
+                "command": "playerlist",
+                "script": "scripts/playerping.tengo",
+                "interval": 5
             }
         ],
         "monitored": [
