Add RCON result cache layer, implement serverinfo stat script.

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -58,6 +58,11 @@
                 "command": "playerlist",
                 "script": "scripts/playerping.tengo",
                 "interval": 5
+            },
+            {
+                "command": "serverinfo",
+                "script": "scripts/serverinfo.tengo",
+                "interval": 10
             }
         ],
         "monitored": [
