Actually add serverinfo script

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -21,6 +21,12 @@
             "run_on_connect": true
         },
         {
+            "command": "playerlist",
+            "storage_key": "middleware:{tag}:ic:serverinfo",
+            "interval": 10,
+            "run_on_connect": true
+        },
+        {
             "command": "server.seed",
             "storage_key": "middleware:{tag}:seed",
             "interval": 0,
