Disable sending OnMessage callbacks for invoked RCON command replies.

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -2,6 +2,7 @@
     "enable_redis_queue": true,
     "enable_influx_stats": true,
     "max_queue_size": 10,
+    "call_onmessage_on_invoke": false,
     "queues_prefix": "rconqueues:{tag}",
     "static_queues": [
         "manager",
