Added internal scripts and internal stat collection

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -55,6 +55,12 @@
         "ssl": true
     },
     "stats": {
+        "internal": [
+            {
+                "script": "scripts/command-timeouts.tengo",
+                "interval": 1
+            }
+        ],
         "invoked": [
             {
                 "command": "server.fps",
