Added rcon stats collection script

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -57,7 +57,7 @@
     "stats": {
         "internal": [
             {
-                "script": "scripts/command-timeouts.tengo",
+                "script": "scripts/rcon-stats.tengo",
                 "interval": 1
             }
         ],
