Added regex based monitored stats functionality. You can now run stats scripts against RCON messages that match a regex. Provides the _MATCHES and _RESPONSE variables containing the matches found in the regex, and the full _RESPONSE struct as a map.

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -23,7 +23,7 @@
         },
         {
             "command": "playerlist",
-            "storage_key": "middleware:{tag}:ic:serverinfo",
+            "storage_key": "middleware:{tag}:ic:playerlist",
             "interval": 10,
             "run_on_connect": true
         },
@@ -79,6 +79,10 @@
             }
         ],
         "monitored": [
+            {
+                "pattern": "Saved ([\\d,]+) ents, cache\\(([\\d\\.]+)\\), write\\(([\\d\\.]+)\\), disk\\(([\\d\\.]+)\\)\\.",
+                "script": "scripts/save-stats.tengo"
+            },
             {
                 "pattern": "Calling '.*' on '.*' took [\\d]+ms.*",
                 "script": "scripts/plugin-timewarning.tengo"
