Fixed type conversation error in monitored scripts. Added save-stats script and disconnect reason script.

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -4,6 +4,7 @@
     "max_queue_size": 10,
     "call_onmessage_on_invoke": false,
     "queues_prefix": "rconqueues:{tag}",
+    "dynamic_queue_key": "rustcon:queues",
     "static_queues": [
         "manager",
         "test"
@@ -80,12 +81,16 @@
         ],
         "monitored": [
             {
+                "pattern": "[\\d]+\\.[\\d]+\\.[\\d]+\\.[\\d]+:[\\d]+/(7656[\\d]{13})/.*disconnecting: (.*)",
+                "script": "scripts/disconnects.tengo"
+            },
+            {
                 "pattern": "Saved ([\\d,]+) ents, cache\\(([\\d\\.]+)\\), write\\(([\\d\\.]+)\\), disk\\(([\\d\\.]+)\\)\\.",
                 "script": "scripts/save-stats.tengo"
             },
             {
                 "pattern": "Calling '.*' on '.*' took [\\d]+ms.*",
-                "script": "scripts/plugin-timewarning.tengo"
+                "script": "scripts/oxide-timewarning.tengo"
             }
         ]
     }
