Batch line protocol writes with a builder, added spawn report stats

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -77,6 +77,11 @@
                 "command": "serverinfo",
                 "script": "scripts/serverinfo.tengo",
                 "interval": 10
+            },
+            {
+                "command": "spawn.report",
+                "script": "scripts/spawn-report.tengo",
+                "interval": 10
             }
         ],
         "monitored": [
