Added golang Runtime stats collection

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -59,7 +59,11 @@
         "internal": [
             {
                 "script": "scripts/rcon-stats.tengo",
-                "interval": 1
+                "interval": 10
+            },
+            {
+                "script": "scripts/runtime-stats.tengo",
+                "interval": 10
             }
         ],
         "invoked": [
