Replaced the shit logger with real logging. Fixed save stat script.

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -9,6 +9,12 @@
         "manager",
         "test"
     ],
+    "logging": {
+        "level": "info",
+        "encoding": "json",
+        "outputPaths": ["stdout"],
+        "errorOutputPaths": ["stderr"]
+    },
     "interval_callbacks": [
         {
             "command": "status",
