Finally gracefully shuts down on CTRL-C

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -11,8 +11,8 @@
     ],
     "logging": {
         "level": "info",
-        "encoding": "json",
-        "outputPaths": ["stdout"],
+        "encoding": "console",
+        "outputPaths": ["stdout", "test.log"],
         "errorOutputPaths": ["stderr"]
     },
     "interval_callbacks": [
