Don't look it's embarassing

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -48,17 +48,17 @@
         }
     ],
     "redis": {
-        "hostname": "data.rustproof.io",
+        "hostname": "redis.host.com",
         "port": 6379,
         "db": 2,
-        "password": "npKqJ89jbajGVV4s"
+        "password": "redis password"
     },
     "influx": {
-        "hostname": "data.rustproof.io",
+        "hostname": "influx.host.com",
         "port": 8086,
-        "username": "bbstats",
-        "password": "3nb6oplk4nxKL",
-        "database": "blueberry_v2",
+        "username": "username",
+        "password": "password",
+        "database": "database",
         "ssl": true
     },
     "stats": {
