New tengo functions, concurrency fixes, CTRL-C fixes. Read below:
- Added -debug flag to override configured log level to debug.
- Added clientperf script and pre-configured stats collection.
- Implemented a lock() and unlock() function to provide a shared mutex between scripts.
- Rewrote how scripts are constructed so the same script is thread safe within itself, allowing the reuse of the same script file from multiple goroutines.
- Rewrite the _GLOBALS implementation into a full internally thread safe tengo object.
- Fixed the ability to CTRL-C to exit gracefully, again.
- Internal RCON Client stats properly count only successful incoming messages.
- Updated documentation to reflect some of the above changes.

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -92,6 +92,11 @@
                 "command": "spawn.report",
                 "script": "scripts/spawn-report.tengo",
                 "interval": 10
+            },
+            {
+                "command": "clientperf",
+                "script": "scripts/clientperf.tengo",
+                "interval": 30
             }
         ],
         "monitored": [
@@ -104,9 +109,14 @@
                 "script": "scripts/save-stats.tengo"
             },
             {
-                "pattern": "Calling '.*' on '.*' took [\\d]+ms.*",
+                "pattern": "^Calling '(.*)' on '(.*) v([\\d\\.]+)' took ([\\d]+)ms\\s?(\\[GARBAGE COLLECT\\])?$",
                 "script": "scripts/oxide-timewarning.tengo"
+            },
+            {
+                "pattern": "([\\d]+)MB\\s*([\\d]+)MB\\s*([\\d]+)FPS\\s*([\\dmshd]+)\\s*(True|False)\\s*(7656[\\d]{13})\\s*(.*)",
+                "Script": "scripts/clientperf.tengo"
             }
+
         ]
     }
 }
