Implemented OnConnectDelay and CallOnMessageOnInvoke - Actually implemented the call_onmessage_on_invoke config, which configures the engine to call OnMessage() for any invoked command replies. Default is false. - Implemented onconnect_delay configuration option, default 120 seconds.  Forces a delay after the connection is established before running the callback. This is useful when a restarting server comes back up, RCON may connect but it may not be ready to receive commands.

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -3,6 +3,7 @@
     "enable_influx_stats": true,
     "max_queue_size": 10,
     "call_onmessage_on_invoke": false,
+    "onconnect_delay": 120,
     "queues_prefix": "rconqueues:{tag}",
     "dynamic_queue_key": "rustcon:queues",
     "static_queues": [
