Added tagescape/fieldescape functions to tengo scripts. Added --test function. Split out structs a bit

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -116,8 +116,11 @@
             {
                 "pattern": "([\\d]+)MB\\s*([\\d]+)MB\\s*([\\d]+)FPS\\s*([\\dmshd]+)\\s*(True|False)\\s*(7656[\\d]{13})\\s*(.*)",
                 "Script": "scripts/clientperf.tengo"
+            },
+            {
+                "pattern": "(?s)Failed to call hook '(.*)' on plugin '(.*)\\sv([\\d\\.]+)' \\((.*)\\)\\n\\s*(.*)",
+                "script": "scripts/oxide-failedhook.tengo"
             }
-
         ]
     }
 }
