Added stats for player reports, oxide time warnings, and oxide failed hook calls.

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -110,16 +110,20 @@
                 "script": "scripts/save-stats.tengo"
             },
             {
-                "pattern": "^Calling '(.*)' on '(.*) v([\\d\\.]+)' took ([\\d]+)ms\\s?(\\[GARBAGE COLLECT\\])?$",
+                "pattern": "Calling '(.*)' on '(.*) v([\\d\\.]+)' took ([\\d]+)ms\\s?(\\[GARBAGE COLLECT\\])?",
                 "script": "scripts/oxide-timewarning.tengo"
             },
             {
                 "pattern": "([\\d]+)MB\\s*([\\d]+)MB\\s*([\\d]+)FPS\\s*([\\dmshd]+)\\s*(True|False)\\s*(7656[\\d]{13})\\s*(.*)",
-                "Script": "scripts/clientperf.tengo"
+                "script": "scripts/clientperf.tengo"
             },
             {
                 "pattern": "(?s)Failed to call hook '(.*)' on plugin '(.*)\\sv([\\d\\.]+)' \\((.*)\\)\\n\\s*(.*)",
                 "script": "scripts/oxide-failedhook.tengo"
+            },
+            {
+                "pattern": "\\[PlayerReport\\] (.*)\\[(7656[\\d]{13})\\] reported (.*)\\[(7656[\\d]{13})\\] - \"\\[([^\\s]+)\\] (.*)\"",
+                "script": "scripts/playerreport.tengo"
             }
         ]
     }
