Added script for tracking blacklisted device kicks

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -124,6 +124,10 @@
             {
                 "pattern": "\\[PlayerReport\\] (.*)\\[(7656[\\d]{13})\\] reported (.*)\\[(7656[\\d]{13})\\] - \"\\[([^\\s]+)\\] (.*)\"",
                 "script": "scripts/playerreport.tengo"
+            },
+            {
+                "pattern": "\\[EAC\\] Kicking (7656[\\d]{13}) / (.*) \\(Blacklisted device: Bloody mouse/A4Tech\\)",
+                "script": "scripts/blacklisteddevice.tengo"
             }
         ]
     }
