Forgot to add flyhacks and failedhooks to the default config.

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -126,6 +126,14 @@
                 "script": "scripts/playerreport.tengo"
             },
             {
+                "pattern": "(.*)\\[(7656\\d{13})\\] FlyHack: Enforcing \\(violation of ([\\d]+\\.?[\\d]*)",
+                "script": "scripts/flyhacks.tengo"
+            },
+            {
+                "pattern": "(?s)Failed to run a ([\\d]+\\.[\\d]+) timer in '(.*) v([\\d\\.]+)' \\((.*)\\)\\n\\s*(.*)",
+                "script": "scripts/oxide-failedtimer.tengo"
+            },
+            {
                 "pattern": "\\[EAC\\] Kicking (7656[\\d]{13}) / (.*) \\(Blacklisted device: Bloody mouse/A4Tech\\)",
                 "script": "scripts/blacklisteddevice.tengo"
             }
