--- a/rustcon.conf
+++ b/rustcon.conf
@@ -3,9 +3,11 @@
     "enable_influx_stats": true,
     "max_queue_size": 10,
     "call_onmessage_on_invoke": false,
+    "ignore_empty_rcon_messages": true,
     "onconnect_delay": 120,
     "queues_prefix": "rconqueues:{tag}",
     "dynamic_queue_key": "rustcon:queues",
+    "callback_queue_key": "rustcon:callbacks:{tag}",
     "static_queues": [
         "manager",
         "test"
