Added SETEX support for callback requests. Updated docs.

--- a/rustcon.conf
+++ b/rustcon.conf
@@ -8,6 +8,7 @@
     "queues_prefix": "rconqueues:{tag}",
     "dynamic_queue_key": "rustcon:queues",
     "callback_queue_key": "rustcon:callbacks:{tag}",
+    "callback_expire": 300,
     "static_queues": [
         "manager",
         "test"
